# hermes-flaky-stabilization

./: .gitignore  .kg-ground-audit.jsonl.ckpt  AGENTS.md  MIGRATION.md  PLAN.md  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  DoD-REPORT.md
hermes_flaky_stabilization/: __init__.py  cli.py  config.py  cronjobs.py  paths.py  registration.py
hermes_flaky_stabilization/bugreport/: __init__.py  domain.py  engine.py  handler.py  host.py  prompts.py  rendering.py  schema.py  validation.py
hermes_flaky_stabilization/common/: __init__.py  nethttp.py  secretscrub.py  timeutil.py
hermes_flaky_stabilization/detective/: __init__.py  cli.py  config.py  detect.py  domain.py  query.py  reporting.py  scan.py  schema.py  storage.py  timeutil.py
hermes_flaky_stabilization/healer/: __init__.py  handlers.py  schemas.py
hermes_flaky_stabilization/history/: __init__.py  cli.py  domain.py  ingest.py  parser.py  queries.py  schema.py  storage.py  timeutil.py
hermes_flaky_stabilization/incidents/: __init__.py  cli.py  config.py  egress.py  ingest.py  jira_client.py  prefetch.py  reader.py  store.py  sync.py  write.py
hermes_flaky_stabilization/orchestrator/: __init__.py  dedup.py  gate.py  hooks.py  pipeline.py
scripts/: deprecate-legacy.sh  flaky-stab-jira-sync.sh  flaky-stab-scan.sh  preflight.sh  run_tests.sh  smoke.sh
tests/: _doubles.py  conftest.py  test_cli.py  test_config.py  test_cronjobs.py  test_healer_wiring.py  test_import_boundaries.py  test_incidents_wiring.py  test_migrate.py  test_parity_phase2.py  test_parity_phase3.py  test_register.py  test_schemas.py  test_security_audit_fixes.py  test_security_scan.py  test_storage_state.py
(+150 files in other folders)
