[project]
name = "hermes-flaky-stabilization"
version = "0.1.0"
description = "Unified Hermes Agent plugin: failure history, flaky detection, CI triage, sandboxed healing with PR flow, bug-report structuring, PII gating, and a local Jira incident index."
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0-only" }
authors = [{ name = "sergiparpal" }]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4", "ruff>=0.5"]
# OCR extras for the PII scanner are runtime-probed, never imported at module
# load: see requirements-ocr.txt.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib -m 'not docker and not live'"
markers = [
    "docker: requires a reachable Docker daemon (skipped when unavailable)",
    "live: requires network and credentials (opt-in only, off by default)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Ported legacy code and test suites are kept verbatim (plan §6.1 porting
# rule); style findings inside them are not ours to fix.
"hermes_flaky_stabilization/history/*" = ["E501"]
"hermes_flaky_stabilization/detective/*" = ["E501"]
"hermes_flaky_stabilization/triage/*" = ["E501", "B904"]
"hermes_flaky_stabilization/pii/*" = ["E501", "B904", "B905"]
"hermes_flaky_stabilization/bugreport/*" = ["E501", "B904"]
"tests/history/*" = ["E501"]
"tests/detective/*" = ["E501", "B018"]
"tests/pii/*" = ["E501", "E402"]
"tests/bugreport/*" = ["E501"]
"tests/triage/*" = ["E501"]
"tests/incidents/*" = ["E501"]
"hermes_flaky_stabilization/incidents/*" = ["E501"]
